[package]
authors = ["d2verb <licprog73@gmail.com>"]
edition = "2018"
name = "caw"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.4"
rusoto_core = "0.47.0"
rusoto_logs = "0.47.0"
tokio = {version = "1.10.0", features = ["full"]}
